[tool.poetry]
name = "cipher_bam2231_again"
version = "0.1.0"
description = "Python package that transforms words with a cipher"
authors = ["Bryn <bam2231@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
